--- a/Index.html
+++ b/Index.html
@@ -136,6 +136,7 @@
             <li> <a href="Cadastro.html"> Cadastro </a> </li> 
             <li> <a href="Entrar.html"> Entrar </a> </li>
         </ul>
+		<!-- Comentário -->
     </nav>
     <div class="content">
         <div class="slides">
